fix(blog)!: list, hide subtitle & no truncate title
Also, remove overrides that are no longer needed.

BREAKING CHANGE: A v3.9 CMS with News i.e. ECEP may have style hiccups.

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.item.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.item.css
@@ -140,28 +140,13 @@ Styleguide Components.DjangoCMS.Blog.App.Item
 
 /* Header - Title */
 
-:--article-item h3,
-:--article-item h4 {
-  margin-block: unset; /* overwrite html-elements.css */
-  font-size: var(--global-font-size--large);
-}
-:--article-item h3 a, /* truncate a not h3 so :focus-visible is not cropped */
-:--article-item h4 {
-  @extend %x-truncate--one-line;
+:--article-item h3 {
+  margin-bottom: unset; /* overwrite Core-Styles headings--cms.css */
 }
 :--article-item h4 {
-  text-transform: none; /* overwrite html-elements.css */
-
-  /* To style subtitle differently than title */
-  /* CAVEAT: Font-weight change switches to font that has different alignment */
-  transform: translateY(2px); /* HACK: tweak vertical alignment */
-  font-weight: var(--regular);
-}
-:--article-item h4::before {
-  content: ': ';
+  display: none;
 }
 :--article-item h3 a {
-  display: block; /* to prevent grid blowout */
   color: var(--global-color-primary--xx-dark);
 }
 
